# elric-template

./: .env.example  .gitignore  ELRIC_BOOST_GUIDELINES.md  LICENSE  README.md  alembic.ini  create_api_key.py  pyproject.toml
app/: __init__.py
app/ai/agents/: base_agent.py
app/ai/chains/: base_chain.py
app/ai/tools/: base_tool.py
app/exceptions/: __init__.py  base.py  handler.py
app/middleware/: api_key.py  logging.py  rate_limit.py
app/providers/: database.py  langsmith.py  redis.py
app/routes/: health.py  test_errors.py
app/utils/: api_key.py
config/: logging.py  settings.py
database/migrations/: env.py
database/migrations/versions/: ebbc48230bdd_create_api_keys.py
database/models/: api_key.py
database/seeders/: __main__.py
docker/: Dockerfile.dev  docker-compose.yml
tests/: conftest.py
