[project]
name = "elric-framework"
version = "1.0.0"
description = "Opinionated Python framework for AI-first applications with FastAPI, LangGraph, and LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "sqlmodel>=0.0.37",
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "redis[asyncio]>=5.0",
    "langchain>=1.2.12",
    "langgraph>=1.1.0",
    "langsmith>=0.7.20",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "rich>=13.0",
    "gunicorn>=21.0",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26",
    "ruff>=0.15.6",
]

[project.scripts]
elric = "elric_cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config", "database", "elric_cli", "tests"]

[tool.hatch.build.targets.wheel.force-include]
"elric_cli/stubs" = "elric_cli/stubs"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"database/migrations/**" = ["E501", "F401"]
"stubs/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
