[project]
name = "elric-template"
version = "1.0.0"
description = "Starter template for Elric applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.49.0",
    "sqlmodel>=0.0.37",
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "redis[asyncio]>=5.0",
    "langchain>=1.2.12",
    "langgraph>=1.2.6",
    "langsmith>=0.7.20",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "gunicorn>=26.0.0",
    "greenlet>=3.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config", "database", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"database/migrations/**" = ["E501", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
